--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -22,14 +22,15 @@ body {
 
 h1 {
   font-family: 'Satisfy', cursive;
-  font-size: 40px;
-  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  font-size: 6.75vw;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #E637BF, 0 0 20px #E637BF, 0 0 25px #E637BF, 0 0 30px #E637BF, 0 0 35px #E637BF
+  
 }
 
 h2 {
   font-family: 'Satisfy', cursive;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
-  font-size: 35px;
+  font-size: 6vh;
 }
 
 main {
