--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -17,6 +17,7 @@ body {
   background: $primary;
   display: flex;
   font-family: 'Raleway', sans-serif;
+  font-weight: bolder;
 }
 
 h1 {
@@ -29,7 +30,7 @@ h1 {
 h2 {
   font-family: 'Satisfy', cursive;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
-  font-size: 6vh;
+  font-size: 5.75vh;
 }
 
 main {
