--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,8 +5,8 @@
 @import 'guestView';
 @import 'managerView';
 @import 'headers';
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import 'text';
+@import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@700&display=swap');
 
 
 html, body {
@@ -14,25 +14,12 @@ html, body {
 }
 
 body {
-  background: $primary;
-  
+  background: url(../images/overlook.jpg);
+  background-size: cover;
   display: flex;
   font-family: 'Raleway', sans-serif;
-  font-weight: bolder;
 }
 
-h1 {
-  font-family: 'Satisfy', cursive;
-  font-size: 6.75vw;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #E637BF, 0 0 20px #E637BF, 0 0 25px #E637BF, 0 0 30px #E637BF, 0 0 35px #E637BF
-  
-}
-
-h2 {
-  font-family: 'Satisfy', cursive;
-  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
-  font-size: 5.75vh;
-}
 
 main {
   @include generalDisplay();
