--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Lexend+Zetta&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 
 h1 {
-  font-family: 'Biorhyme', serif;
-  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
-  font-size: 6.75vw; 
+  font-family: 'Homemade Apple', serif;
+  // text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  font-size: 6.55vw; 
 }
 
 h2 {
-  font-family: 'Biorhyme', serif;
+  font-family: 'Homemade Apple', serif;
   font-size: 5.75vh;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
 }
