--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -14,10 +14,10 @@ html, body {
 }
 
 body {
-  background: url(../images/overlook.jpg);
+  background: url(../images/grey-mountain.jpg);
   background-size: cover;
   display: flex;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 
