--- a/src/css/_headers.scss
+++ b/src/css/_headers.scss
@@ -1,7 +1,7 @@
 header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
   height: 100px;
   width: 100%;
   position: absolute;
