--- a/src/css/_headers.scss
+++ b/src/css/_headers.scss
@@ -1,17 +1,7 @@
 header {
-  display: flex;
-  align-items: center;
-  // justify-content: space-between;
+  @include generalDisplay();
   height: 100px;
   width: 100%;
-  position: absolute;
-}
-
-.logo-box {
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100%;
   padding: 15px;
-  margin-bottom: 5px;
+  position: absolute;
 }
