--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,4 +1,5 @@
-$seaFoam: grey;
+$grey: grey;
+$modalColor: hsla(297, 13%, 31%, 0.83);
 
 @mixin generalDisplay() {
   display: flex;
@@ -7,7 +8,11 @@ $seaFoam: grey;
 }
 
 @mixin borders() {
-  border: 2px solid $seaFoam;
-  border-radius: 4px;
+  border: 2px solid $grey;
+  border-radius: 6px;
   background: transparent;
+}
+
+@mixin headerFont() {
+  font-family: 'Homemade Apple', serif;
 }
