--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,6 +3,7 @@ $modalColor: hsla(297, 13%, 31%, 0.83);
 
 @mixin generalDisplay() {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -10,9 +11,23 @@ $modalColor: hsla(297, 13%, 31%, 0.83);
 @mixin borders() {
   border: 2px solid $grey;
   border-radius: 6px;
-  background: transparent;
+  background: $modalColor;
 }
 
-@mixin headerFont() {
+@mixin headerFont($font-size) {
   font-family: 'Homemade Apple', serif;
+  font-size: $font-size;
+}
+
+@mixin buttons {
+  @include borders();
+  font: bolder 20px 'Josefin Sans', serif;
+  color: #FFFFFF;
+  margin-top: 20px;
+  height: 2.75vw;
+  width: 95px;
+  &:hover {
+    background-color: $grey;
+  }
+  
 }
