--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -4,6 +4,8 @@
 
 h1 {
   @include headerFont(6.55vw);
+  margin-top: 40px;
+
 }
 
 h2 {
@@ -13,6 +15,7 @@ h2 {
 
 h4 {
   @include headerFont(4vh);
+  margin-top: 20px;
 }
 
 h5 {
