--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,6 @@
 @import 'variables';
-@import 'login';
-@import 'mobileQueries';
+@import 'loginView';
+@import 'mediaView';
 @import 'reset';
 @import 'guestView';
 @import 'managerView';
@@ -28,7 +28,7 @@ header {
 main {
   @include generalDisplay();
   padding: 2%;
-  height: 80%;
+  height: 90%;
   width: 100%;
 }
 
