--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -30,3 +30,14 @@ $modalColor: hsla(297, 13%, 31%, 0.83);
         background-color: $grey;
       }
 }
+
+@mixin userViews {
+  @include generalDisplay();
+  // display: none;
+  justify-content: flex-start;
+  font: lighter 20px 'Josefin Sans', serif;
+  color: white;
+  margin-top: 40px;
+  height: 100%;
+  width: 100%;
+}
