--- a/src/css/_loginView.scss
+++ b/src/css/_loginView.scss
@@ -1,31 +1,15 @@
-.login-modal {
+.login-view {
   @include generalDisplay();
   @include borders();
+  @include modalSizes();
   background-color: $modalColor;
   box-shadow: 1px 1px 35px black;
   display: none;
-  width: 50vw;
-  height: 30vw;
-}
-
-.login {
-  @include generalDisplay();
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  .form-input {
-    @include generalDisplay();
-  }
 }
 
 .inputs {
   @include borders();
-  font: bolder 20px 'Josefin Sans', serif;
-  color: #FFFFFF;
-  margin: 15px;
-  padding: 6px;
-  height: 3vw;
-  text-align: center;
+  @include inputs();
 }
 
 .login-btn {
