Add method to sort bookings by user

--- a/src/css/_loginView.scss
+++ b/src/css/_loginView.scss
@@ -4,7 +4,7 @@
   @include modalSizes();
   background-color: $modalColor;
   box-shadow: 1px 1px 35px black;
-  display: none;
+  // display: none;
 }
 
 .inputs {
