--- a/src/css/_managerView.scss
+++ b/src/css/_managerView.scss
@@ -9,9 +9,7 @@
   height: 30vh;
   width: 70vh;
   .mgr-stats {
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-right: 5px;
+    text-align: center;
   }
 }
 
@@ -49,6 +47,7 @@
 .guest-card {
   @include borders();
   @include generalDisplay();
+  justify-content: initial;
   margin: 20px;
   padding: 2%;
   width: 25vw;
