--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap');
 
 h1 {
   @include headerFont(6.55vw);
@@ -12,7 +13,10 @@ h2 {
 }
 
 h4 {
-  @include headerFont(4vh);
+  // @include headerFont(4vh);
+  font-family: 'Josefin Sans';
+  font-size: 4vh;
+  margin-bottom: 10px;
 }
 
 h5 {
