Change button from book reservation to search reservation

--- a/src/css/_guestView.scss
+++ b/src/css/_guestView.scss
@@ -10,7 +10,7 @@
   @include borders();
   @include modals();
   justify-content: initial;
-  
+  height: 70vh;
   padding: 2%;
     #exit-btn-style {
       display: flex;
