--- a/src/css/_formView.scss
+++ b/src/css/_formView.scss
@@ -23,17 +23,18 @@
     .date-input {
       @include borders();
       @include bodyFont(16px);
-      margin: 6px;
+      margin: 10px;
       padding: 15px;
     }
-    .cost-label {
+    .cost-label, output {
       font-size: 16px;
+      margin: 10px;
     }
-
 }
 
 .tag-list {
   @include generalDisplay();
+  margin: 10px;
 }
 
 .tag-box {
