--- a/src/css/_formView.scss
+++ b/src/css/_formView.scss
@@ -35,38 +35,50 @@
 .tag-list {
   @include generalDisplay();
   margin: 10px;
-}
-
-.tag-box {
-  margin: 5px;
-  .tag-prompt {
-    font-size: 16px;
-    text-align: center;
+  .tag-box {
+    margin: 5px;
+    .tag-prompt {
+      font-size: 16px;
+      text-align: center;
+    }
+      .tag-btn {
+        @include buttons();
+        font-size: 14px;
+        width: 70px;
+      }
+        .tag-btn.active {
+          background-color: $grey;
+          border: 2px solid $opaqueMauve;
+        }
+          #type-tag {
+            height: 25px;
+          }
+            #residential {
+              width: 100px;
+            }
   }
-    .tag-btn {
-      @include buttons();
-      font-size: 14px;
-      width: 70px;
-    }
-    .tag-btn.active {
-      background-color: $grey;
-      border: 2px solid $opaqueMauve;
-    }
-      #type-tag {
-        height: 25px;
-      }
-      #residential {
-        width: 100px;
-      }
 }
 
 .available-rooms {
   @include generalDisplay();
-  flex-direction: row;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
+  justify-content: initial;
+  overflow: scroll;
+  scroll-behavior: smooth; 
+    .found-room {
+      @include generalDisplay();
+      text-align: center;
+      margin: 20px;
+      height: 80%;
+    }
+      .found-room-date {
+        margin-bottom: 5px;
+      }
+        .unavailable-msg {
+          text-align: center;
+        }
 }
-.book-reservation {
+
+.search-reservations-btn {
   @include buttons();
   width: 8vw;
   height: 6vh;
