Add method to delete booking from server

--- a/src/css/_guestView.scss
+++ b/src/css/_guestView.scss
@@ -14,7 +14,7 @@
   padding: 2%;
     #exit-btn-style {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       width: 100%;
     }
     .exit-btn, 
