Add media queries

--- a/src/css/_formView.scss
+++ b/src/css/_formView.scss
@@ -63,6 +63,9 @@
       .found-room-date {
         margin-bottom: 5px;
       }
+      .book-room-btn {
+        width: 8vh;
+      }
         .search-reservations-btn {
           @include borders();
           height: 8vh;
