--- a/src/css/_managerView.scss
+++ b/src/css/_managerView.scss
@@ -7,8 +7,9 @@
   @include generalDisplay();
   @include borders();
   height: 30vh;
-  width: 70vh;
+  width: 65vh;
   .mgr-stats {
+    padding: 1%;
     text-align: center;
   }
 }
@@ -18,6 +19,7 @@
   text-align: center;
   height: 2.5vh;
   margin-bottom: 20px;
+  width: 100%;
     #search-guest-input {
       height: 5vh;
     }
@@ -57,7 +59,7 @@
       }
     .expand-found-guest-btn {
       @include buttons();
-      width: 10vw;
+      width: 16vh;
     }
 }
 
