Fix styling on exit button

--- a/src/css/_formView.scss
+++ b/src/css/_formView.scss
@@ -37,6 +37,7 @@
     }
       .tag-btn {
         font-size: 14px;
+        height: 50px;
         width: 70px;
       }
         .tag-btn.active {
